WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
246639
DOMException should be exposed to ShadowRealm
https://bugs.webkit.org/show_bug.cgi?id=246639
Summary
DOMException should be exposed to ShadowRealm
Caitlin Potter (:caitp)
Reported
2022-10-17 10:41:49 PDT
Created
attachment 463037
[details]
web-platform-test results There are a number of WPT failures relating to the DOMInterface object not being exposed to ShadowRealms. I've already implemented a fix and will submit in a moment
Attachments
web-platform-test results
(141.73 KB, application/json)
2022-10-17 10:41 PDT
,
Caitlin Potter (:caitp)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Caitlin Potter (:caitp)
Comment 1
2022-10-17 10:48:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5449
Caitlin Potter (:caitp)
Comment 2
2022-10-17 10:55:03 PDT
s/DOMInterface/DOMException/, derp
Radar WebKit Bug Importer
Comment 3
2022-10-24 10:43:09 PDT
<
rdar://problem/101506572
>
Ahmad Saleem
Comment 4
2023-12-20 20:43:57 PST
***
Bug 265568
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug