Expose DOMException to ShadowRealms https://bugs.webkit.org/show_bug.cgi?id=246639

Reviewed by NOBODY (OOPS!).

There are WPT tests verifying that the interface is exposed. This change gets
them passing (IFF the feature flag is enabled).

* Source/WebCore/bindings/js/WebCoreBuiltinNames.h:
* Source/WebCore/dom/DOMException.idl: