Source/WebCore/bindings/js/WebCoreBuiltinNames.h
@@ -161,6 +161,7 @@ namespace WebCore {
     macro(DelayNode) \
     macro(DeprecationReportBody) \
     macro(DocumentTimeline) \
+    macro(DOMException) \
     macro(DynamicsCompressorNode) \
     macro(ElementInternals) \
     macro(EncodedVideoChunk) \
